--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,94 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
 }
+
+.header__topContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* modal */
+.modal {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  background: rgba(0, 0, 0, 0.801);
+  transition: all 2s ease;
+}
+.modal__body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.modal__content {
+  width: 350px;
+  box-shadow: -2px 43px 122px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  position: relative;
+}
+.modal__close {
+  position: absolute;
+  cursor: pointer;
+  top: 15px;
+  right: 15px;
+  font-size: 26px;
+  font-weight: 500;
+  color: rgba(242, 187, 21, 0.7960784314);
+}
+
+.active {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 96%;
+}
+
+.header {
+  height: 100vh;
+  background: #18181B;
+}
+.header__top {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background: rgba(34, 34, 40, 0.8);
+  display: flex;
+  align-items: center;
+  padding: 15px 0;
+  color: white;
+}
+.header__topContent {
+  justify-content: space-between;
+}
+.header__logo {
+  font-size: 22px;
+  line-height: 25px;
+}
+.header__logoDecor {
+  display: flex;
+  justify-content: center;
+  color: #79109D;
+}
+.header__search-Wrapper {
+  width: 300px;
+}
+.header__searchBox {
+  height: 40px;
+  font-size: 18px;
+  color: red;
+  width: 100%;
+  border-radius: 50px;
+  transition: all 500ms ease;
+  padding: 0 30px;
+}
