--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(34, 34, 40, 0.8);
   display: flex;
   align-items: center;
-  padding: 15px 0;
+  padding: 12px 0;
   color: white;
 }
 .header__topContent {
@@ -157,15 +157,31 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
   color: #79109D;
 }
-.header__search-Wrapper {
+.header .form {
   width: 300px;
+  display: flex;
+  background: white;
+  border: 1px solid #79109D;
+  border-radius: 50px;
+  height: 40px;
 }
 .header__searchBox {
-  height: 40px;
   font-size: 18px;
-  color: red;
+  color: black;
   width: 100%;
+  height: 100%;
   border-radius: 50px;
   transition: all 500ms ease;
-  padding: 0 30px;
+  padding: 0 25px;
+}
+.header__searchBox::-moz-placeholder {
+  color: gray;
+}
+.header__searchBox::placeholder {
+  color: gray;
+}
+.header .form__btn {
+  display: flex;
+  align-self: center;
+  padding-right: 20px;
 }
