--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 .header {
     height: 100vh;
     background: #18181B;
+    background: #2C2C55;
     &__top {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         background: #222228CC;
@@ -29,23 +30,27 @@
     &__logoDecor{
         display: flex;
         justify-content: center;
-        color: #79109D;
+        color: #bf00ff;
+        font-weight: 500;
     }
     .form{
-        width: 300px;
+        width: 400px;
         display: flex;
-        // align-items: center;
         background: white;
         border: 1px solid #79109D;
         border-radius: 50px;
         height: 40px;
+        &__btn{
+            display: flex;
+            align-self: center;
+            padding-right: 20px;
+        }
     }
     &__searchBox {
         font-size: 18px;
         color:black;
         width: 100%;
         height: 100%;
-        // border: 1px solid #09000c;
         border-radius: 50px;
         transition: all 500ms ease;
         padding: 0 25px;
@@ -53,9 +58,35 @@
             color: gray;
         }
     }
-    .form__btn{
-        display: flex;
-        align-self: center;
-        padding-right: 20px;
+    &__content{
+        margin-top: 10px;
+    }
+    &__title{
+        color: white;
+        font-size: 36px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    &__wrapper {
+        @extend %fl-wr-spBetween;
+        justify-content: center;
+    }
+    &__FactFilm {
+        width: 450px;
+        height: 450px;
+        background: linear-gradient(109.69deg, rgba(29, 66, 162, 0.6) 12.26%, rgba(53, 72, 222, 0.6) 49.27%, rgba(0, 0, 0, 0.6) 65.36%, rgba(255, 0, 79, 0.6) 87.89%, rgba(73, 49, 71, 0.6) 115.24%);
+        margin-right: 20px;
+        border-radius: 20px;
+        padding: 30px;
+        &-title{
+            font-size: 30px;
+            text-align: center;
+        }
+    }
+    &__films {
+        width: 450px;
+        height: 450px;
+        background: #79109D;
+        border-radius: 20px;
     }
 }
