--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
 }
 
-.header__wrapper {
+.card__wrapper, .header__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header {
-  height: 100vh;
+  height: 105vh;
   background: #18181B;
   background: #2C2C55;
 }
@@ -169,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 400px;
   display: flex;
   background: white;
-  border: 1px solid #79109D;
+  box-shadow: rgb(153, 35, 72) 0px 30px 90px;
   border-radius: 50px;
   height: 40px;
 }
@@ -212,14 +212,82 @@ h1, h2, h3, h4, h5, h6 {
   margin-right: 20px;
   border-radius: 20px;
   padding: 30px;
+  color: white;
+  text-align: center;
 }
 .header__FactFilm-title {
   font-size: 30px;
-  text-align: center;
+  margin-bottom: 30px;
+}
+.header__FactFilm-text {
+  line-height: 30px;
+  font-size: 22px;
+}
+.header__FactFilm-decor {
+  font-size: 30px;
 }
 .header__films {
   width: 450px;
   height: 450px;
-  background: #79109D;
   border-radius: 20px;
+  box-shadow: 1px 1px 2px 3px rgba(255, 255, 255, 0.349);
+}
+
+.card {
+  height: 100%;
+  width: 100%;
+}
+.card__img {
+  height: 60%;
+}
+.card__img-item {
+  -o-object-fit: fill;
+     object-fit: fill;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+.card__title {
+  text-align: center;
+  color: #bf00ff;
+  font-size: 28px;
+  padding: 8px 0;
+}
+.card .card__inner {
+  padding: 10px 20px;
+}
+.card__text {
+  color: white;
+  font-size: 20px;
+  padding: 5px 0;
+}
+.card__decor {
+  color: rgba(253, 253, 253, 0.712);
+  text-transform: uppercase;
+  font-size: 23px;
+  font-weight: 500;
+}
+.card__wrapper {
+  justify-content: space-around;
+  align-items: center;
+}
+.card__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  width: 150px;
+  padding: 8px 0px;
+  transition: all 1s ease-out 0s;
+  font-size: 18px;
+  color: rgba(253, 253, 253, 0.712);
+}
+.card__btn::after {
+  content: "";
+  display: flex;
+  align-self: center;
+  color: white;
+  background: url("../img/icon/arrow.svg") no-repeat center right;
+  padding: 8px;
+  padding-left: 15px;
 }
