--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,13 +6,17 @@
     @include container(1200px)
 }
 .FactLoading{
-    animation: circle 1.8s cubic-bezier(0.06, -0.09, 0.89, 0.26) infinite normal running 0s none;
     margin-top:25% ;
     &__text{
         font-size: 30px;
         line-height: 23px;
+        animation: circle 1.8s cubic-bezier(0.06, -0.09, 0.89, 0.26) infinite normal running 0s none;
+    }
+    &_active{
+        display: none;
     }
 }
+
 @keyframes circle{
     0%{
         color: black;
@@ -103,6 +107,13 @@
         &-content{
             line-height: 18px;
             font-size: 20px;
+        }
+        &-text{
+            color: rgba(253, 253, 253, 0.712);
+        }
+        &-name{
+            margin-top: 30px;
+            text-align: left;
         }
     }
 }
