--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
   padding: 10px;
 }
 .modal__content {
@@ -310,4 +311,34 @@ h1, h2, h3, h4, h5, h6 {
   background: url("../img/icon/arrow.svg") no-repeat center right;
   padding: 8px;
   padding-left: 15px;
+}
+
+.modalFilm__content {
+  width: 600px;
+  background: #fcfcfc;
+  box-shadow: none;
+  position: static;
+}
+
+.modalFilm__close {
+  top: 8%;
+  right: 5%;
+  color: #ffffff;
+  font-weight: 600;
+}
+
+.modalFilm__video {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+}
+.modalFilm__video iframe {
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
