--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,3 +178,33 @@
         }
     }
 }
+
+// setting modal
+.modalFilm__content{
+    width: 600px;
+    background: #fcfcfc;
+    box-shadow: none;
+    position: static;
+}
+.modalFilm__close{
+    top: 8%;
+    right: 5%;
+    color: #ffffff;
+    font-weight: 600;
+}
+.modalFilm__video{
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    & iframe{
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
