--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,10 @@ h1, h2, h3, h4, h5, h6 {
     color: white;
   }
 }
+.title {
+  text-align: center;
+}
+
 .header {
   height: 105vh;
   background: #18181B;
@@ -220,7 +224,6 @@ h1, h2, h3, h4, h5, h6 {
 .header__title {
   color: white;
   font-size: 36px;
-  text-align: center;
   margin-bottom: 10px;
 }
 .header__wrapper {
@@ -269,7 +272,6 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 20px;
 }
 .card__title {
-  text-align: center;
   color: #bf00ff;
   font-size: 28px;
   padding: 8px 0;
@@ -314,24 +316,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .modalFilm__content {
-  width: 600px;
+  width: 500px;
   background: #fcfcfc;
   box-shadow: none;
   position: static;
 }
-
 .modalFilm__close {
   top: 8%;
   right: 5%;
   color: #ffffff;
   font-weight: 600;
 }
-
 .modalFilm__video {
   position: relative;
-  height: 0;
   overflow: hidden;
-  padding-bottom: 56.25%;
+  padding-right: 56.25%;
+  width: 80%;
+  margin-right: 5px;
 }
 .modalFilm__video iframe {
   -o-object-fit: cover;
@@ -341,4 +342,30 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 13px;
+}
+.modalFilm__title {
+  font-size: 32px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-bottom: 5px;
+}
+.modalFilm__description {
+  padding: 0 15px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: rgba(26, 24, 24, 0.801);
+}
+.modalFilm__galley img {
+  position: relative;
+  width: 100px;
+}
+.modalFilm__galley-title {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 3px;
+  display: inline-block;
+}
+.modalFilm__inner {
+  display: flex;
+  justify-content: space-between;
 }
