--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,9 @@
         color: white;
     }   
 }
+.title{
+    text-align: center;
+}
 // block
 .header {
     height: 105vh;
@@ -84,7 +87,6 @@
     &__title{
         color: white;
         font-size: 36px;
-        text-align: center;
         margin-bottom: 10px;
     }
     &__wrapper {
@@ -133,7 +135,6 @@
         }
     }
     &__title{
-        text-align: center;
         color: #bf00ff;
         font-size: 28px;
         padding: 8px 0;
@@ -180,31 +181,61 @@
 }
 
 // setting modal
-.modalFilm__content{
-    width: 600px;
-    background: #fcfcfc;
-    box-shadow: none;
-    position: static;
-}
-.modalFilm__close{
-    top: 8%;
-    right: 5%;
-    color: #ffffff;
-    font-weight: 600;
-}
-.modalFilm__video{
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    & iframe{
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+.modalFilm{
+    &__content{
+        width: 500px;
+        background: #fcfcfc;
+        box-shadow: none;
+        position: static;
+    }
+    &__close{
+        top: 8%;
+        right: 5%;
+        color: #ffffff;
+        font-weight: 600;
+    }
+    &__video{
+        position: relative;
+        overflow: hidden;
+        padding-right: 56.25%;
+        width: 80%;
+        margin-right: 5px;
+        & iframe{
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 13px;
+        }
+    }
+    &__title{
+        font-size: 32px;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        margin-bottom: 5px;
+    }
+    &__description{
+        padding: 0 15px;
+        margin-bottom: 10px;
+        font-weight: 600;
+        color: rgba(26, 24, 24, 0.801);
+    }
+    &__galley{
+        & img{
+            position: relative;
+            width: 100px;
+        }
+        &-title{
+            font-size: 16px;
+            font-weight: 500;
+            padding: 3px;
+            display: inline-block;
+        }
+    }
+    &__inner{
+        display: flex;
+        justify-content: space-between;
     }
 }
-
 
