--- a/scss/style.scss
+++ b/scss/style.scss
@@ -94,6 +94,7 @@
         justify-content: center;
     }
     &__FactFilm {
+        display: none;
         width: 450px;
         height: 450px;
         background: linear-gradient(109.69deg, rgba(29, 66, 162, 0.6) 12.26%, rgba(53, 72, 222, 0.6) 49.27%, rgba(0, 0, 0, 0.6) 65.36%, rgba(255, 0, 79, 0.6) 87.89%, rgba(73, 49, 71, 0.6) 115.24%);
@@ -216,7 +217,7 @@
         margin-bottom: 5px;
     }
     &__description{
-        padding: 0 15px;
+        padding: 15px;
         margin-bottom: 10px;
         font-weight: 600;
         color: rgba(26, 24, 24, 0.801);
