--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,9 @@
 .container{
     @include container(1200px)
 }
+.header__films{
+    display: flex;
+}
 .FactLoading{
     margin-top:25% ;
     &__text{
