--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,7 +97,7 @@
         justify-content: center;
     }
     &__FactFilm {
-        // display: none;
+        display: none;
         width: 450px;
         height: 450px;
         background: linear-gradient(109.69deg, rgba(29, 66, 162, 0.6) 12.26%, rgba(53, 72, 222, 0.6) 49.27%, rgba(0, 0, 0, 0.6) 65.36%, rgba(255, 0, 79, 0.6) 87.89%, rgba(73, 49, 71, 0.6) 115.24%);
