--- a/scss/style.scss
+++ b/scss/style.scss
@@ -243,3 +243,23 @@
     }
 }
 
+// slider
+.slider__navigation{
+    display: flex;
+    justify-content: center;
+}
+.slider__btn{
+    width: 150px;
+    padding: 10px 0;
+    border-radius: 10px;
+    box-shadow: 2px 3px 5px #bf00ffc9;
+    color: white;
+    font-size: 20px;
+    margin: 14px;
+    transition:all 800ms ease-in-out 0s;
+    &:hover{
+        color:black;
+        background: rgba(255, 255, 255, 0.411);
+        box-shadow: 2px 3px 5px #bf00ffad;
+    }
+}
