--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,25 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+.header__NothingFound {
+  display: flex;
+  align-items: center;
+  color: rgba(255, 0, 0, 0.774);
+  font-size: 30px;
+  animation: NothingFound 1.5s cubic-bezier(0.06, -0.09, 0.89, 0.26) infinite normal running 0s none;
+}
+.header__NothingFound_active {
+  display: none;
+}
+
+@keyframes NothingFound {
+  0% {
+    color: rgba(255, 0, 0, 0.774);
+  }
+  100% {
+    color: black;
+  }
+}
 .header {
   height: 105vh;
   background: #18181B;
@@ -258,9 +277,15 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 30px;
   text-align: left;
 }
+.header__films {
+  width: 450px;
+  height: 450px;
+  display: flex;
+  justify-content: center;
+}
 
 .card {
-  width: 450px;
+  max-width: 450px;
   height: 450px;
   border-radius: 20px;
   box-shadow: 1px 1px 2px 3px rgba(255, 255, 255, 0.445);
@@ -381,7 +406,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .slider__btn {
   width: 150px;
-  padding: 10px 0;
+  padding: 5px 0;
   border-radius: 10px;
   box-shadow: 2px 3px 5px rgba(191, 0, 255, 0.7882352941);
   color: white;
@@ -391,6 +416,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 .slider__btn:hover {
   color: black;
-  background: rgba(255, 255, 255, 0.411);
+  background: rgba(255, 255, 255, 0.479);
   box-shadow: 2px 3px 5px rgba(191, 0, 255, 0.6784313725);
 }
