--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,25 @@
 .title{
     text-align: center;
 }
+// header__NothingFound
+.header__NothingFound{
+    display: flex;
+    align-items: center;
+    color: rgba(255, 0, 0, 0.774);
+    font-size: 30px;
+    animation: NothingFound 1.5s cubic-bezier(0.06, -0.09, 0.89, 0.26) infinite normal running 0s none;
+    &_active{
+        display: none;
+    }
+}
+@keyframes NothingFound{
+    0%{
+        color: rgba(255, 0, 0, 0.774);
+    }
+    100%{
+        color: black;
+    }   
+}
 // block
 .header {
     height: 105vh;
@@ -122,10 +141,16 @@
             text-align: left;
         }
     }
+    &__films{
+        width: 450px;
+        height: 450px;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .card{
-    width: 450px;
+    max-width: 450px;
     height: 450px;
     border-radius: 20px;
     box-shadow: 1px 1px 2px 3px rgba(255, 255, 255, 0.445);
@@ -250,7 +275,7 @@
 }
 .slider__btn{
     width: 150px;
-    padding: 10px 0;
+    padding: 5px 0;
     border-radius: 10px;
     box-shadow: 2px 3px 5px #bf00ffc9;
     color: white;
@@ -259,7 +284,7 @@
     transition:all 800ms ease-in-out 0s;
     &:hover{
         color:black;
-        background: rgba(255, 255, 255, 0.411);
+        background: rgba(255, 255, 255, 0.479);
         box-shadow: 2px 3px 5px #bf00ffad;
     }
 }
